// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Carousel default 1`] = `
<bolt-carousel slides-per-view="1">
  <bolt-carousel-slide>
    <bolt-image src="/fixtures/1200x660.jpg"
                srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                sizes="auto"
                ratio="1200/660"
                alt="A Rock Climber"
                no-lazy
                style="background-color: hsl(233, 33%, 97%); width: 100%;"
    >
    </bolt-image>
    <div>
      Slide 1
    </div>
  </bolt-carousel-slide>
  <bolt-carousel-slide>
    <bolt-image src="/fixtures/1200x660.jpg"
                srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                sizes="auto"
                ratio="1200/660"
                alt="A Rock Climber"
                no-lazy
                style="background-color: hsl(233, 33%, 97%); width: 100%;"
    >
    </bolt-image>
    <div>
      Slide 2
    </div>
  </bolt-carousel-slide>
  <bolt-carousel-slide>
    <bolt-image src="/fixtures/1200x660.jpg"
                srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
                sizes="auto"
                ratio="1200/660"
                alt="A Rock Climber"
                no-lazy
                style="background-color: hsl(233, 33%, 97%); width: 100%;"
    >
    </bolt-image>
    <div>
      Slide 3
    </div>
  </bolt-carousel-slide>
  <bolt-button slot="previous-btn"
               color="secondary"
               size="medium"
               border-radius="full"
               icon-only
  >
    Previous
    <bolt-icon size="large"
               slot="before"
               name="chevron-left"
    >
    </bolt-icon>
  </bolt-button>
  <bolt-button slot="next-btn"
               color="secondary"
               size="medium"
               border-radius="full"
               icon-only
  >
    Next
    <bolt-icon size="large"
               slot="after"
               name="chevron-right"
    >
    </bolt-icon>
  </bolt-button>
</bolt-carousel>
`;

exports[`Bolt Carousel default 2`] = `
<div class="c-bolt-carousel-slide">
  <slot>
  </slot>
</div>
`;

exports[`Bolt Carousel default 3`] = `
<bolt-carousel-slide class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
                     style="width: 790px; margin-right: 30px;"
>
  <bolt-image src="/fixtures/1200x660.jpg"
              srcset="/fixtures/1200x660-50.jpg 50w, /fixtures/1200x660-100.jpg 100w, /fixtures/1200x660-200.jpg 200w, /fixtures/1200x660-320.jpg 320w, /fixtures/1200x660-480.jpg 480w, /fixtures/1200x660-640.jpg 640w, /fixtures/1200x660-800.jpg 800w, /fixtures/1200x660-1024.jpg 1024w"
              sizes="auto"
              ratio="1200/660"
              alt="A Rock Climber"
              no-lazy
              style="background-color: hsl(233, 33%, 97%); width: 100%;"
  >
  </bolt-image>
  <div>
    Slide 1
  </div>
</bolt-carousel-slide>
`;
